--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -6,7 +6,6 @@
     <title>header fragments</title>
 </head>
 <body>
-<!-- 초안입니다, cluade ai 도움받음 -->
 <header th:fragment="header" class="page-header">
     <div class="header-container">
         <!-- 로고 이미지 표시 -->
@@ -63,9 +62,10 @@
         }
         
         .user-profile {
-        	padding-top : 0.5rem;
             display: flex;
             align-items: center;
+            justify-content: center;
+            height: 100%;
         }
         
         .profile-image {
