--- a/src/main/resources/templates/chat/chatroom.html
+++ b/src/main/resources/templates/chat/chatroom.html
@@ -48,8 +48,10 @@
 <!-- 모달 -->
 <div id="modal" class="modal-overlay">
     <div class="modal-header">
-        <h5 class="modal-title">채팅방 정보</h5>
+        <h5 class="room-name">채팅방 정보</h5>
         <div class="close-btn" onclick="closeModal()">×</div>
+    </div>
+    <div class="modal-content room-detail">
     </div>
     <div class="modal-content">
         <span><i class="bi bi-card-image"></i>&nbsp;&nbsp;사진</span>
