--- a/src/main/resources/templates/chat/chatroomForm.html
+++ b/src/main/resources/templates/chat/chatroomForm.html
@@ -55,7 +55,7 @@
                 </td>
             </tr>
         </table>
-        <input type="file" id="imgInput" accept="image/*" name="img" class="form-control">
+        <input type="file" id="imgInput" accept="image/*" name="chatroomImage" class="form-control">
     </form>
 </div>
 </body>
