--- a/src/main/resources/static/css/chat/chatroom.css
+++ b/src/main/resources/static/css/chat/chatroom.css
@@ -272,7 +272,6 @@ div.modal-content {
 }
 .modal-content span {
     font-size: 16px;
-    font-weight: bold;
     padding-top: 10px;
     padding-left: 10px;
     display: block;
@@ -282,6 +281,19 @@ div.modal-content {
     position: absolute;
     bottom: 20px;
     right: 20px;
+}
+.room-detail {
+    display: flex;
+    align-items: center;
+    padding: 10px;
+    background-color: #f8f9fa;
+    border-radius: 10px;
+    margin-bottom: 10px;
+}
+.room-detail img {
+    width: 120px;
+    height: 120px;
+    border-radius: 25%;
 }
 
 .exit-btn {
@@ -298,4 +310,9 @@ div.modal-content {
 
 .exit-btn:hover {
     background-color: #c82333;
+}
+.room-name {
+    font-size: 20px;
+    font-weight: bold;
+    margin-left: 10px;
 }
