--- a/src/main/resources/static/css/mypage/mypage.css
+++ b/src/main/resources/static/css/mypage/mypage.css
@@ -310,3 +310,19 @@ body * {
 	font-weight: bold;
 	color: #1b5e20;
 }
+
+.box1 {
+	display : flex;
+}
+
+.my-type {
+	width : 4.5rem;
+	height : 2rem;
+	margin-left : auto;
+	margin-right : 2rem;
+	background-color : #FFF1B0;
+	border-radius : 0.5rem;
+	display : flex;
+	align-items: center;
+	justify-content: center;
+}
