--- a/src/main/resources/templates/chat/chatroomForm.html
+++ b/src/main/resources/templates/chat/chatroomForm.html
@@ -18,7 +18,7 @@
 <body>
 <div >
     <div class="preview-container">
-        <img class="preview" src="https://via.placeholder.com/200?text=Upload+Image">
+        <img class="preview" src="https://kr.object.ncloudstorage.com/wellfit/image/noimage.jpeg">
     </div>
     <form action="./create" method="post" enctype="multipart/form-data">
         <table class="table table-bordered">
