--- a/src/main/resources/templates/views/record/record.html
+++ b/src/main/resources/templates/views/record/record.html
@@ -152,7 +152,7 @@
         
         
         <!-- 타이틀 -->
-        <div class="sub-container">
+        <div class="sub-container meal-sub">
             <div class="header">
                 <h1>식사</h1>
             </div>
@@ -199,7 +199,7 @@
                 </div>
                 
                 <!-- 간식 -->
-                <div class="meal-card" data-meal_type="snack">
+                <div class="meal-card meal-bottom" data-meal_type="snack">
                     <div class="meal-icon snack-icon">
                         <!-- 간식 아이콘 (음료와 과자) -->
                         <span>🧃</span>
