--- a/src/main/resources/templates/views/loginpage/welcome.html
+++ b/src/main/resources/templates/views/loginpage/welcome.html
@@ -19,7 +19,8 @@
 <div layout:fragment="content">
 	<div class="content-container">
 		<div class="notice-container">
-			<div class="notice">오신 것을 환영합니다.</div>
+			<div class="notice">WellFit에 오신 것을</div>
+			<div class="notice1">환영합니다.</div>
 			<div class="notice2">몇가지만 알려주시면</div>
 			<div class="notice2">목표 설정을 도와드릴게요</div>
 			<a class="btn-next" th:href="@{/inputdata1}">목표 설정하기</a>
